--- a/main/.classpath
+++ b/main/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="src" path="unit"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/home/nwertzberger/Repos/libs/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
