--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ideaheap.sound"
-    android:versionCode="3"
-    android:versionName="1.0.1" >
+    android:versionCode="4"
+    android:versionName="1.1.0" >
 
     <uses-sdk android:minSdkVersion="9" />
 
@@ -15,7 +15,7 @@
         android:theme="@style/PageTheme">
         <activity
             android:label="@string/app_name"
-            android:name=".ui.SoundActivity"
+            android:name=".ui.SoundheapActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
             <intent-filter >
