--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -20,10 +20,13 @@
             android:configChanges="orientation|keyboardHidden">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name=".ui.tabs.RecordTab" />
+        <activity android:name=".ui.tabs.PlaybackTab" />
+        <activity android:name=".ui.tabs.ProjectTab" />
     </application>
 
 </manifest>
