--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
     android:versionCode="4"
     android:versionName="1.1.0" >
 
-    <uses-sdk android:minSdkVersion="9" />
+    <uses-sdk
+         android:minSdkVersion="9"
+         android:targetSdkVersion="14"
+         />
 
     <uses-feature android:name="android.hardware.microphone" android:required="true" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -12,8 +15,9 @@
     <application
         android:icon="@drawable/logo"
         android:label="@string/app_name" 
-        android:theme="@style/PageTheme">
+        android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
         <activity
+            
             android:label="@string/app_name"
             android:name=".ui.SoundheapActivity"
             android:screenOrientation="portrait"
