--- a/main/project.properties
+++ b/main/project.properties
@@ -8,5 +8,6 @@
 # project structure.
 
 # Project target.
-target=android-10
+target=android-16
 android.library.reference.1=../../libogg-vorbis-android/main
+android.library.reference.2=../../sherlock
